--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3111,6 +3111,33 @@ input, select, textarea {
 		text-decoration: none; /* Elimina el subrayado de los enlaces */
 	}
 
+	/*
+
+			@media screen and (max-width: 1680px) {
+
+			html {
+				font-size: 12pt;
+			}
+
+		}
+
+		@media screen and (max-width: 1280px) {
+
+			html {
+				font-size: 11pt;
+			}
+
+		}
+
+		@media screen and (max-width: 360px) {
+
+			html {
+				font-size: 10pt;
+			}
+
+		}
+
+		*/
 
 /* Intro */
 
@@ -3127,47 +3154,24 @@ input, select, textarea {
 
 		line-height: 4rem;
 		margin: -4rem auto 0 auto;
-		/* max-width: 72rem; */
 		min-height: 40vh;
 		overflow: hidden;
 		padding: 8rem 4rem 6rem 4rem ;
 		position: relative;
-		/*transition: opacity 1s ease, transform 1s ease;*/
 		width: calc(100% - 4rem);
 		z-index: 1;
-
 		-moz-flex-direction: row;
 		-moz-justify-content: -moz-flex-end;
-		/*-moz-transition: opacity 1s ease, -moz-transform 1s ease;*/
 		-ms-flex-direction: row;
 		-ms-justify-content: -ms-flex-end;
-		/*-ms-transition: opacity 1s ease, -ms-transform 1s ease;*/
 		-webkit-justify-content: -webkit-flex-end;
-		/*-webkit-transition: opacity 1s ease, -webkit-transform 1s ease;*/
 		-webkit-flex-direction: row;
-
 		display: flex;
 	}
 
 		.photo-placeholder, .texto {
 			flex: 1;
 			padding: 20px;
-		}
-
-		#intro .photo-placeholder {
-			width: 400px;
-			height: 400px;
-			margin-left: 20px;
-			margin-bottom: 20px;
-		}
-
-		#intro .descripcion {
-			font-family: Arial; /* Cambia la fuente del texto */
-			font-size: 16px; /* Cambia el tamaño del texto */
-			line-height: 1.5; /* Cambia el espaciado entre líneas */
-			text-align: left;
-			margin-bottom: 20px;
-			/* Agrega otros estilos según tus necesidades */
 		}
 
 		#intro .texto .texto1{
@@ -3185,142 +3189,28 @@ input, select, textarea {
 			line-height: 1.4;
 			margin-bottom: 20px;
 		}
+
+		#intro .texto .buttons-container { /* Contenedor de lo botones */
+			display: flex;
+			justify-content: left;
+			gap: 0.2rem;
+		}s
 		
-		#intro input, #intro select, #intro textarea {
-			color: #ffffff;
-		}
-
-		#intro .photo-placeholder,
-		#intro > div {
-			flex: 1; /* Distribuye el espacio disponible de manera equitativa entre los elementos */
-			text-align: left; /* Alinea el contenido al centro */
-		}
-
-		#intro .photo-placeholder,
-		#intro >img {
-			max-width: 100%; /* Ajusta el tamaño máximo de la imagen según sea necesario */
-			height: auto; /* Ajusta la altura automáticamente para mantener la proporción */
-		}
-
-		#intro .button:focus{
-			outline: none;
+		.buttons-container a.button { /* botones */
+			text-decoration: none;
+			padding: 10px 20px;
+			border: 2px solid #000;
+			border-radius: 5px;
+			font-size: 16px;
+			color: #000;
+			background-color: #fff;
+			display: flex;
+			align-items: center;
 		}
 		
-		.photo-placeholder,
-		.texto {
-			flex: 1;
+		.buttons-container a.button i {
+			margin-right: 5px;
 		}
-		#intro a {
-			color: #ffffff;
-			border-bottom-color: rgba(255, 255, 255, 0.5);
-		}
-
-			#intro a:hover {
-				border-bottom-color: transparent;
-				color: #18bfef !important;
-			}
-
-		#intro strong, #intro b {
-			color: #ffffff;
-		}
-
-		#intro h1, #intro h2, #intro h3, #intro h4, #intro h5, #intro h6 {
-			color: #ffffff;
-		}
-
-		#intro blockquote {
-			border-left-color: #ffffff;
-		}
-
-		#intro code {
-			background: rgba(255, 255, 255, 0.075);
-			border-color: #ffffff;
-		}
-
-		#intro hr {
-			border-bottom-color: #ffffff;
-		}
-
-		#intro input[type="submit"],
-		#intro input[type="reset"],
-		#intro input[type="button"],
-		#intro button,
-		#intro .button {
-			background-color: transparent;
-			box-shadow: inset 0 0 0 2px #ffffff;
-			color: #ffffff !important;
-			
-		}
-
-			#intro input[type="submit"]:hover,
-			#intro input[type="reset"]:hover,
-			#intro input[type="button"]:hover,
-			#intro button:hover,
-			#intro .button:hover {
-				box-shadow: inset 0 0 0 2px #18bfef;
-				color: #18bfef !important;
-			}
-
-			#intro input[type="submit"].primary,
-			#intro input[type="reset"].primary,
-			#intro input[type="button"].primary,
-			#intro button.primary,
-			#intro .button.primary {
-				background-color: #ffffff;
-				box-shadow: none;
-				color: #1e252d !important;
-			}
-
-				#intro input[type="submit"].primary:hover,
-				#intro input[type="reset"].primary:hover,
-				#intro input[type="button"].primary:hover,
-				#intro button.primary:hover,
-				#intro .button.primary:hover {
-					background-color: #18bfef;
-				}
-
-		#intro h1 {
-			font-size: 5rem;
-			line-height: 1;
-			margin-top: -20px;
-			text-align: left;
-		}
-
-		#intro p {
-			font-size: 1.25rem;
-			font-style: italic;
-			margin-top: -0.25rem;
-			text-align: right;
-		}
-
-		#intro + #header {
-			margin-top: -20rem;
-		}
-
-			#intro + #header .logo {
-				-moz-transform: translateY(2rem);
-				-webkit-transform: translateY(2rem);
-				-ms-transform: translateY(2rem);
-				transform: translateY(2rem);
-				opacity: 0;
-				visibility: hidden;
-			}
-
-		body.is-preload #intro {
-			-moz-transform: translateY(2rem);
-			-webkit-transform: translateY(2rem);
-			-ms-transform: translateY(2rem);
-			transform: translateY(2rem);
-			opacity: 0;
-		}
-
-			body.is-preload #intro:not(.hidden) + #header + #nav {
-				-moz-transform: translateY(4rem);
-				-webkit-transform: translateY(4rem);
-				-ms-transform: translateY(4rem);
-				transform: translateY(4rem);
-				opacity: 0;
-			}
 
 		@media screen and (max-width: 980px) {
 
@@ -3360,8 +3250,78 @@ input, select, textarea {
 				#intro .actions {
 					display: none;
 				}
-
 		}
+
+		@media screen and (max-width: 450px) {
+
+			#intro {
+				align-items: center;
+				color: #ffffff;
+				flex-direction: column;
+				justify-content: space-between;
+				line-height: 3rem;
+				margin: 5rem 0 0 2rem;
+				padding: 8rem 4rem 1rem 1rem ;
+				width: 100%;
+			}
+		
+			#intro .texto .texto1{
+				font-size: 1rem;
+			}
+	
+			#intro .texto .texto2{
+				font-size: 2.5rem;
+				font-weight: bold;
+				margin-bottom: 2rem;
+			}
+	
+			#intro .texto .texto3{
+				font-size: 0.9rem;
+				margin-right: 0rem;
+				width: 100%;
+				margin: 0;
+				padding: 0;
+				margin-bottom: 2rem;
+			}
+		}
+
+		#intro input[type="submit"],
+		#intro input[type="reset"],
+		#intro input[type="button"],
+		#intro button,
+		#intro .button {
+			background-color: transparent;
+			box-shadow: inset 0 0 0 2px #ffffff;
+			color: #ffffff !important;
+			
+		}
+
+			#intro input[type="submit"]:hover,
+			#intro input[type="reset"]:hover,
+			#intro input[type="button"]:hover,
+			#intro button:hover,
+			#intro .button:hover {
+				box-shadow: inset 0 0 0 2px #18bfef;
+				color: #18bfef !important;
+			}
+
+			#intro input[type="submit"].primary,
+			#intro input[type="reset"].primary,
+			#intro input[type="button"].primary,
+			#intro button.primary,
+			#intro .button.primary {
+				background-color: #ffffff;
+				box-shadow: none;
+				color: #1e252d !important;
+			}
+
+				#intro input[type="submit"].primary:hover,
+				#intro input[type="reset"].primary:hover,
+				#intro input[type="button"].primary:hover,
+				#intro button.primary:hover,
+				#intro .button.primary:hover {
+					background-color: #18bfef;
+				}
 
 /* Main */
 
@@ -3460,6 +3420,36 @@ input, select, textarea {
 		
 		#main .button:focus{
 			outline: none;
+		}
+
+		@media screen and (max-width: 450px) {
+
+			#main {
+				align-items: center;
+				color: #ffffff;
+				flex-direction: column;
+				justify-content: space-between;
+				line-height: 3rem;
+				margin: 5rem 0 0 2rem;
+				padding: 8rem 4rem 1rem 1rem ;
+				width: 100%;
+			}
+		
+			#main .portafolio .reporte1,
+			#main .portafolio .reporte2 {
+				display: flex;
+				flex-direction: column;
+				/*flex-direction: row-reverse;*/
+			}
+
+			#main .portafolio .reporte1 .contenedor_imagen{
+				padding: 0.5rem;
+				width: 100%;
+				height: auto;
+			}
+
+
+	
 		}
 
 		#main input[type="submit"],
